--- a/_config.yml
+++ b/_config.yml
@@ -3,19 +3,17 @@
 # -----------------------------------------------------------------------------
 
 title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+first_name: Vide
+last_name: Coder
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  歡迎透過以下方式與我聯繫。
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  10 年軟體規劃與設計經驗，擁有產品思維與設計思考能力的 Vide Coder。分享軟體開發、產品設計與技術思考。
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
-lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
+keywords: software-development, product-design, coding, vide-coder # add your own keywords or leave empty
+lang: zh-tw # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://otoitsuki.github.io # the base hostname & protocol for your site
@@ -86,8 +84,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: Vide Coding 50 Days # blog_name will be displayed in your blog page
+blog_description: 軟體開發、產品設計與技術思考的 50 天挑戰
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
@@ -113,7 +111,7 @@ giscus:
   dark_theme: dark # name of the dark color scheme (preferred works well with al-folio dark mode)
   light_theme: light # name of the light color scheme (preferred works well with al-folio light mode)
   emit_metadata: 0
-  lang: en
+  lang: zh-tw
 
 # Disqus comments (DEPRECATED)
 disqus_shortname: al-folio # put your disqus shortname
