--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,9 @@
 title: blank # the website title (if blank, full name will be used instead)
 first_name: Vide
 last_name: Coder
-contact_note: >
-  歡迎透過以下方式與我聯繫。
+contact_note: 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  10 年軟體規劃與設計經驗，擁有產品思維與設計思考能力的 Vide Coder。分享軟體開發、產品設計與技術思考。
+  Vide Coding 30 Days 部落格。
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
